Implemented sidebar and started SearchScreen CSS

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,2 +1,5 @@
 @import './base/settings';
 @import './base/base';
+@import './components/_sidebar.scss';
+@import './components/_header.scss';
+@import './components/_searchScreen.scss';
