--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,7 +1,11 @@
 // Colors
+$redBg: #ff7070;
 // Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
 $xl-size: 4.8rem;
 $desktop-breakpoint: 45rem;
+
+//Fonts
+@font-face { font-family: Biko; src: url('/fonts/Biko_Regular.otf'); } 
