added css for SearchScreen WeatherDisplayScreen and Sidebar components

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,3 +3,4 @@
 @import './components/_sidebar.scss';
 @import './components/_header.scss';
 @import './components/_searchScreen.scss';
+@import './components/_weatherDisplayScreen.scss';
