--- a/src/styles/components/_searchScreen.scss
+++ b/src/styles/components/_searchScreen.scss
@@ -3,6 +3,7 @@
     height: 100vh;
     font-size: $l-size;
     .searchScreen__form {
+        display: block;
         color: white;
         text-align: center;
         position: absolute;
@@ -18,5 +19,12 @@
         top: 65%;
         left: 50%;
         transform: translate(-50%, -50%);
+    }
+    .searchScreen_btn p {
+        display: block;
+    }
+
+    .searchScreen_btn button {
+        display: block;
     }
 }
