--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -1,54 +1,54 @@
-.sidenav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: #111;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-
-    h1 {
-        padding: 8px 8px 8px 32px;
-        font-size: 25px;
-        color: #818181;
-        display: table-caption;
-        margin-bottom: 150px;
-        transition: 0.3s;
-    }
-
-    a {
-        padding: 8px 8px 8px 32px;
-        text-decoration: none;
-        font-size: 25px;
-        color: #818181;
-        display: block;
-        transition: 0.3s;
-
-        &:hover {
-            color: #f1f1f1;
-        }
-    }
-
-    .closebtn {
-        position: absolute;
+.sidebar {
+    background-color: transparent;
+    .sidebar__sidenav {
+        height: 100%;
+        width: 0;
+        position: fixed;
+        z-index: 1;
         top: 0;
-        right: 25px;
-        font-size: 36px;
-        margin-left: 50px;
+        left: 0;
+        background-color: $sidebarGreen;
+        overflow-x: hidden;
+        transition: 0.5s;
+        padding-top: 60px;
+        h1 {
+            padding: 8px 8px 8px 32px;
+            font-size: 25px;
+            color: white;
+            display: table-caption;
+            margin-bottom: 150px;
+            transition: 0.3s;
+        }
+        a {
+            padding: 8px 8px 8px 32px;
+            text-decoration: none;
+            font-size: 25px;
+            color: $customPurple;
+            display: block;
+            transition: 0.3s;
+            &:hover {
+                color: #f1f1f1;
+            }
+        }
+        .closebtn {
+            position: absolute;
+            top: 0;
+            right: 25px;
+            font-size: 36px;
+            margin-left: 50px;
+        }
     }
 }
 
-
-
- .spanStyle  {
+.spanStyle {
     font-size: 50px;
-    cursor: pointer;
 }
 
 @media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+    .sidenav {
+        padding-top: 15px;
+    }
+    .sidenav a {
+        font-size: 18px;
+    }
 }
