--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -42,6 +42,10 @@
 
 .spanStyle {
     font-size: 50px;
+    color: $sidebarGreen;
+    position: absolute;
+    left: 2rem;
+    cursor: pointer;
 }
 
 @media screen and (max-height: 450px) {
