--- a/src/styles/components/_weatherDisplayScreen.scss
+++ b/src/styles/components/_weatherDisplayScreen.scss
@@ -1,45 +1,51 @@
-.weatherdisplayscreen{
+body {
     background-color: $customPurple;
-    height: 100vh;
-    color: white;
-    position: relative;
+    font-size: 2rem;
 }
 
-.forecasts-box {
-    width: 50vw;
+.weatherbox {
+    width: 60vw;
+    position: absolute;
     margin-left: auto;
     margin-right: auto;
-    display: flex;
-    flex-direction: column;
-    position: absolute;
-    top: 50%;
-    left:50%;
+    top: 55%;
+    left: 50%;
     transform: translate(-50%, -50%);
-    justify-content: space-around;
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
 
-    @media screen and (max-width: $break-small) {
-        top: 55%;
-      }
+    @include for-tablet-portrait-up {
+        width: 80vw;
+    }
 
-    @media screen and (min-width: $break-medium) {
-
-      }
-}
-.today {
-    font-size: $l-size;
-    @media screen and (max-width: $break-small) {
-        font-size: $m-size;
+    @include for-desktop-up {
+        width: 60vw;
     }
 }
 
-.multipleforecasts {
-    display: flex;
+.today {
+    width: 100%;
+    padding-bottom: 1%;
+    font-size: $l-size;
+}
+
+.rest {
+    width: 100%;
+    display: inline-flex;
     flex-direction: row;
     justify-content: space-around;
 
-}
+    @include for-phone-only {
+        flex-direction: column;
+    }
 
+    @include for-tablet-portrait-up {
+        justify-content: space-around;
+    }
+}
 .highlightColor {
     color: $sidebarGreen;
 }
@@ -49,11 +55,4 @@
 }
 
 .setpadding {
-    @media screen and (max-width: $break-small) {
-        padding: 0 .7rem 0 .7rem;
-      }
-
-      @media screen and (min-width: $break-medium) {
-        padding: 0 5rem 0 5rem;
-    }
 }
