--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,3 +6,7 @@
 @import './components/_header.scss';
 @import './components/_searchScreen.scss';
 @import './components/_weatherDisplayScreen.scss';
+@import './components/_notFoundPage.scss';
+@import './components/_credits.scss';
+@import './components/_contact.scss';
+@import './components/_about.scss';
