--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -8,10 +8,16 @@ body {
     display: flex;
     flex-direction: column;
     flex-flow: column;
+    flex-wrap: wrap;
+    justify-content: center;
     align-items: center;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
+    h2 {
+        text-align: center;
+    }
 
     @include for-tablet-portrait-up {
         font-size: $l-size;
