--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,21 +1,42 @@
-.header {
-    position: absolute;
-    width: 10vw;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 25;
+// .header {
+//     position: absolute;
+//     width: 10vw;
+//     height: auto;
+//     margin-left: auto;
+//     margin-right: auto;
+//     text-align: center;
+//     top: 10%;
+//     left: 50%;
+//     transform: translate(-50%, -50%);
+//     z-index: 25;
 
-    @include for-phone-only-landscape {
-        img {
-            height: auto; 
-            width: auto; 
-            max-width: 45px; 
-            max-height: 45px;
+//     @include for-phone-only-landscape {
+//         img {
+//             height: auto; 
+//             width: auto; 
+//             max-width: 45px; 
+//             max-height: 45px;
+//         }
+//     }
+// }
+
+.header {
+    width: 50%;
+    height: auto;
+    margin: 0 auto;
+    text-align: center;
+
+    &__icon {
+        height: 6rem;
+        width: 6rem;
+        fill: #fff;
+        padding: 1rem 0;
+        margin: 0;
+
+        @media (max-height: 240px) {
+            width: 3rem;
+            height: 3rem;
+            padding: .3rem 0;
         }
     }
 }
