--- a/src/styles/components/_searchScreen.scss
+++ b/src/styles/components/_searchScreen.scss
@@ -1,90 +1,106 @@
-.searchScreen {
-    background-color: $redBg;
-    height: 100vh;
-    font-size: $l-size;
-    color: white;
-    position: relative;
-
-}
 
 .searchbox {
-    width: 90vw;
-    height: auto;
-    margin-left: auto;
-    margin-right: auto;
     display: flex;
     flex-direction: column;
-    position: absolute;
+    justify-content: center;
+    align-items: center;
+    width: 90vw;
+    height: auto;
+    // background-color: green;
+    position: absolute; 
     top: 50%;
-    left:50%;
+    left: 50%;
     transform: translate(-50%, -50%);
-    justify-content: space-around;
-    text-align: center;
-    padding: 0;
-    z-index: 100;
-
-    @include for-phone-only-landscape {
-        top: 65%;
-        font-size: 2rem;
-
-        justify-content: space-between;
+    @media (max-height: 345px) {
+        top: 55%;
+        font-size: 1.5rem;
+        justify-content: flex-end;
     }
-
-    @include for-tablet-portrait-up {
-        top: 45%;
-        width: 75vw;
+    &__icon {
+        height: 3rem;
+        width: 3rem;
+        fill: #fff;
+        background-color: $customPurple;
+        padding: 0;
+        margin: 0;
     }
+    &__form {
+        display: inline-flex;
+        justify-content: center;
+        border: 0;
+        border-radius: 2rem 2rem;
+        align-items: center;
+        flex-direction: row;
+        background-color: $customPurple;
+        box-shadow: .2rem .2rem .8rem $darkerPurple;
+        padding: 1rem;
 
-    @include for-tablet-landscape-up {
-        top: 40%;
-        width: 50vw;
-        font-size: $l-size;
-    }
+        @media (max-height: 345px) {
+            padding: 0;
+        }
 
-    @include for-desktop-up {
-        top: 50%;
-        width: 40vw;
+        @include for-tablet-portrait-up {
+            width: 50vw;
+        }
+
+        @include for-desktop-up {
+            width: 40%;
+        }
+
+        &-button {
+            width: 3rem;
+            height: 3rem;
+            padding: 0;
+            margin-right: .5rem;
+            flex: 1;
+            color: white;
+            z-index: 3;
+            border: 0;
+
+            @include for-tablet-portrait-up {
+                flex: 0;
+                margin-left: auto;
+            }
+        }
     }
 }
 
-.searchbox__form-root {
-    position: relative;
-}
-
-.form__button {
-    position: absolute;
-    width: 5rem;
-    height: 5rem;
-    top: 10%;
-    right: 9%;
-    background-image: url("/images/magnifier.png");
-    background-repeat: no-repeat;
-    background-position: 0.6rem 0.6rem;
-    background-color: white;
-    background-size: 3rem;
-}
-
-.locationbutton {
-    width: 70%;
-    height: 6rem;
-    align-self: center;
-    font-size: 2rem;
+.location {
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    border-radius: 2rem 2rem;
+    padding: 0 3rem;
+    height: auto;
     background-color: $sidebarGreen;
-    border: none;
-    color: $customPurple;
-    background-image: url("/images/send.png");
-    background-repeat: no-repeat;
-    background-position: 10% 50%;
-    text-indent: 20%;
+    box-shadow: .1rem .1rem .5rem darken($sidebarGreen, 10%);
 
-    @include for-phone-only-landscape {
-        width: 55%;
+    @media (max-height: 345px) {
+        padding: 0 1rem;
     }
 
-    @include for-tablet-portrait-up {
-        width: 40%;
+    &__button {
+        height: 5rem;
+        flex: 1;
+        background-color: $sidebarGreen;
+        color: #fff;
+        border: 0;
+
+        @media (max-height: 345px) {
+            height: 2rem;
+        }
     }
 
+    &__icon {
+        height: 3rem;
+        width: 3rem;
+        fill: #fff;
+        background-color: $sidebarGreen;
+        border: 0;
+        padding: 0;
+        margin: 0;
+    }
 }
 
 
