--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -14,6 +14,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    color: #fff;
 
     h2 {
         text-align: center;
