--- a/src/styles/components/_contact.scss
+++ b/src/styles/components/_contact.scss
@@ -12,6 +12,7 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    color: #fff;
 
     a {
         text-decoration: none;
