--- a/src/styles/components/_searchScreen.scss
+++ b/src/styles/components/_searchScreen.scss
@@ -6,11 +6,16 @@
     align-items: center;
     width: 90vw;
     height: auto;
-    // background-color: green;
+    color: #fff;
     position: absolute; 
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+
+    p {
+        font-size: 2.5rem;
+        margin-top: 3rem;
+    }
     @media (max-height: 345px) {
         top: 55%;
         font-size: 1.5rem;
@@ -51,7 +56,7 @@
             width: 3rem;
             height: 3rem;
             padding: 0;
-            margin-right: .5rem;
+            margin-right: 2rem;
             flex: 1;
             color: white;
             z-index: 3;
